--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     
+    <header>
+        <h1>Samuel Taylor</h1>
+        <nav>
+            <a>About</a>
+            <a>>CONTACT/a>
+            <a>Test 2</a>
+            <a>Test 4</a>
+        </nav>
+    </header>
+        
 </body>
 </html>
